--- a/.storybook/basic.css
+++ b/.storybook/basic.css
@@ -12,11 +12,12 @@ h1 {
 	font-weight: bold;
 }
 h2 {
-	font-size: 1.4em;
+	font-size: 1.6em;
 	font-weight: bold;
 }
 
 h3 {
+	font-size: 1.2em;
 	font-weight: bold;
 }
 
@@ -31,6 +32,10 @@ li {
 
 strong {
 	font-weight: bold;
+}
+
+em {
+	font-style: italic;
 }
 
 p {
