Tenth commit is documentation and some cleanup.

--- a/src/stories/components/DocumentShowcase.css
+++ b/src/stories/components/DocumentShowcase.css
@@ -1,4 +1,8 @@
-html, body, #root {
+/**
+ * Make the tabs in each story look okay, mimick some Storybook styles to do it.
+ */
+
+ html, body, #root {
 	height: 100%;
 	width: 100%;
 	margin: 0;
